<resources>
    <string name="app_name">TinUni</string>
    <string name="tinuni">tinuni</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>

    <string name="sign_up_process_personal">Your personal information is </string>
    <string name="sign_up_process_level">your studying level is </string>
    <string name="sign_up_process_education">your education information</string>
    <string name="your_name">Your name</string>
    <string name="your_phone">Your phone</string>
    <string name="your_school">Your school</string>
    <string name="your_major">Your major</string>
    <string name="school_year">Year begins</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="not_save">No save</string>
    <string name="redo">Redo</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="new_demand">New Demand</string>
    <string name="subject">Subject</string>
    <string name="major">Major</string>
    <string name="school">School</string>
    <string name="level">Level</string>


    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>


    <string name="sign_up_1">Sign Up</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Your name</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="go_back">Go back</string>
    <string name="dont_have_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_reset_password">Enter your email and click reset, you will receive an email to reset your password!</string>
    <string name="reset">Reset</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="shortTextSlider">Heading</string>
    <string name="longTextSlider">Text</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
</resources>